fix: issue with z-index #88

--- a/src/themes/default/_main.scss
+++ b/src/themes/default/_main.scss
@@ -7,7 +7,7 @@
   right: 0;
   padding: 2em;
   overflow: hidden;
-  z-index: 1052;
+  z-index: 1090;
   pointer-events: none;
 
   &__item {
